Worked on Layout: 1) Header - done 2) PictureGrid - bottom not done 3) Bug: PictureGrid bleeds into SpeakMatchComponent on small screen. Parent don't have no size so children go cray-cray.

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,10 @@ img {
   text-orientation: sideways-right;
   transform: rotate(180deg);
 }
+
+
+/* Custom Classes */
+
+.section-heading {
+  @apply py-1 text-xl font-bold text-gray-900 dark:text-white;
+}
